--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.15.1 Kernel Configuration
+# Linux/x86 6.15.2 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.1.1 20250425"
 CONFIG_CC_IS_GCC=y
@@ -5265,7 +5265,7 @@ CONFIG_SECURITY_LOCKDOWN_LSM_EARLY=y
 # CONFIG_LOCK_DOWN_KERNEL_FORCE_NONE is not set
 # CONFIG_LOCK_DOWN_KERNEL_FORCE_INTEGRITY is not set
 CONFIG_LOCK_DOWN_KERNEL_FORCE_CONFIDENTIALITY=y
-# CONFIG_SECURITY_LANDLOCK is not set
+CONFIG_SECURITY_LANDLOCK=y
 # CONFIG_SECURITY_IPE is not set
 CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_SIGNATURE=y
@@ -5281,7 +5281,7 @@ CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_EVM is not set
 # CONFIG_DEFAULT_SECURITY_SMACK is not set
 CONFIG_DEFAULT_SECURITY_DAC=y
-CONFIG_LSM="lockdown,integrity,yama"
+CONFIG_LSM="lockdown,integrity,landlock,yama"
 
 #
 # Kernel hardening options
