--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.16.0 Kernel Configuration
+# Linux/x86 6.16.1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20250813"
 CONFIG_CC_IS_GCC=y
@@ -359,7 +359,7 @@ CONFIG_X86_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
 # CONFIG_HYPERVISOR_GUEST is not set
 CONFIG_CC_HAS_MARCH_NATIVE=y
-# CONFIG_X86_NATIVE_CPU is not set
+CONFIG_X86_NATIVE_CPU=y
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
 CONFIG_X86_TSC=y
@@ -1135,7 +1135,6 @@ CONFIG_ARCH_HAS_PTE_DEVMAP=y
 CONFIG_ZONE_DMA=y
 CONFIG_ZONE_DMA32=y
 CONFIG_HMM_MIRROR=y
-CONFIG_VMAP_PFN=y
 CONFIG_ARCH_USES_PG_ARCH_2=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_PERCPU_STATS is not set
@@ -2603,7 +2602,6 @@ CONFIG_PINCTRL=y
 # CONFIG_W1 is not set
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_RESTART=y
-# CONFIG_POWER_RESET_TORADEX_EC is not set
 # CONFIG_POWER_SEQUENCING is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -4958,7 +4956,6 @@ CONFIG_CRYPTO_LIB_UTILS=y
 CONFIG_CRYPTO_LIB_AES=y
 CONFIG_CRYPTO_LIB_ARC4=m
 CONFIG_CRYPTO_LIB_GF128MUL=m
-CONFIG_CRYPTO_ARCH_HAVE_LIB_BLAKE2S=y
 CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
 CONFIG_CRYPTO_ARCH_HAVE_LIB_CURVE25519=y
 CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=y
@@ -4969,7 +4966,7 @@ CONFIG_CRYPTO_LIB_SHA256=y
 CONFIG_CRYPTO_ARCH_HAVE_LIB_SHA256=y
 CONFIG_CRYPTO_ARCH_HAVE_LIB_SHA256_SIMD=y
 CONFIG_CRYPTO_LIB_SHA256_GENERIC=y
-CONFIG_CRYPTO_BLAKE2S_X86=y
+# CONFIG_CRYPTO_BLAKE2S_X86 is not set
 CONFIG_CRYPTO_SHA256_X86_64=y
 # end of Crypto library routines
 
