--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.16.6 Kernel Configuration
+# Linux/x86 6.16.7 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20250813"
 CONFIG_CC_IS_GCC=y
@@ -512,6 +512,7 @@ CONFIG_MITIGATION_SPECTRE_V2=y
 # CONFIG_MITIGATION_SRBDS is not set
 # CONFIG_MITIGATION_SSB is not set
 # CONFIG_MITIGATION_TSA is not set
+# CONFIG_MITIGATION_VMSCAPE is not set
 CONFIG_ARCH_HAS_ADD_PAGES=y
 
 #
