--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.17.5 Kernel Configuration
+# Linux/x86 6.17.6 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20250813"
 CONFIG_CC_IS_GCC=y
@@ -59,9 +59,8 @@ CONFIG_POSIX_MQUEUE=y
 CONFIG_POSIX_MQUEUE_SYSCTL=y
 CONFIG_WATCH_QUEUE=y
 # CONFIG_CROSS_MEMORY_ATTACH is not set
-CONFIG_AUDIT=y
+# CONFIG_AUDIT is not set
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
-CONFIG_AUDITSYSCALL=y
 
 #
 # IRQ subsystem
@@ -1312,7 +1311,6 @@ CONFIG_NETFILTER_XTABLES_COMPAT=y
 #
 # Xtables targets
 #
-# CONFIG_NETFILTER_XT_TARGET_AUDIT is not set
 # CONFIG_NETFILTER_XT_TARGET_CLASSIFY is not set
 # CONFIG_NETFILTER_XT_TARGET_HMARK is not set
 # CONFIG_NETFILTER_XT_TARGET_IDLETIMER is not set
@@ -2040,7 +2038,6 @@ CONFIG_DM_UEVENT=y
 # CONFIG_DM_LOG_WRITES is not set
 CONFIG_DM_INTEGRITY=m
 # CONFIG_DM_ZONED is not set
-CONFIG_DM_AUDIT=y
 # CONFIG_DM_VDO is not set
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
@@ -4644,13 +4641,11 @@ CONFIG_PROC_MEM_ALWAYS_FORCE=y
 # CONFIG_PROC_MEM_NO_FORCE is not set
 CONFIG_MSEAL_SYSTEM_MAPPINGS=y
 CONFIG_SECURITY=y
-CONFIG_HAS_SECURITY_AUDIT=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_PATH=y
 # CONFIG_INTEL_TXT is not set
 # CONFIG_STATIC_USERMODEHELPER is not set
-# CONFIG_SECURITY_SELINUX is not set
 CONFIG_SECURITY_SMACK=y
 CONFIG_SECURITY_SMACK_BRINGUP=y
 CONFIG_SECURITY_SMACK_NETFILTER=y
@@ -4666,7 +4661,6 @@ CONFIG_SECURITY_LOCKDOWN_LSM_EARLY=y
 # CONFIG_LOCK_DOWN_KERNEL_FORCE_INTEGRITY is not set
 CONFIG_LOCK_DOWN_KERNEL_FORCE_CONFIDENTIALITY=y
 CONFIG_SECURITY_LANDLOCK=y
-# CONFIG_SECURITY_IPE is not set
 CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_SIGNATURE=y
 CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
@@ -4675,7 +4669,6 @@ CONFIG_INTEGRITY_PLATFORM_KEYRING=y
 CONFIG_INTEGRITY_MACHINE_KEYRING=y
 # CONFIG_INTEGRITY_CA_MACHINE_KEYRING is not set
 CONFIG_LOAD_UEFI_KEYS=y
-CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_IMA_SECURE_AND_OR_TRUSTED_BOOT is not set
 # CONFIG_EVM is not set
