--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.18.1 Kernel Configuration
+# Linux/x86 6.18.2 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20251112"
 CONFIG_CC_IS_GCC=y
@@ -743,7 +743,7 @@ CONFIG_ARCH_SUPPORTS_SCHED_SMT=y
 CONFIG_ARCH_SUPPORTS_SCHED_CLUSTER=y
 CONFIG_ARCH_SUPPORTS_SCHED_MC=y
 CONFIG_SCHED_SMT=y
-CONFIG_SCHED_CLUSTER=y
+# CONFIG_SCHED_CLUSTER is not set
 CONFIG_SCHED_MC=y
 CONFIG_HOTPLUG_CORE_SYNC=y
 CONFIG_HOTPLUG_CORE_SYNC_DEAD=y
@@ -4245,7 +4245,6 @@ CONFIG_DMAR_TABLE=y
 CONFIG_INTEL_IOMMU=y
 CONFIG_INTEL_IOMMU_SVM=y
 # CONFIG_INTEL_IOMMU_DEFAULT_ON is not set
-CONFIG_INTEL_IOMMU_FLOPPY_WA=y
 CONFIG_INTEL_IOMMU_SCALABLE_MODE_DEFAULT_ON=y
 CONFIG_INTEL_IOMMU_PERF_EVENTS=y
 # CONFIG_IOMMUFD is not set
